# helix

./: Cargo.toml  README.md  migrate-topics.sh  readme
docs/: ARCHITECTURE.md  HOOKS.md
helix/: DOCS.md  README.md
helix/docs/: CLAUDE.md  TOOLS.md
helix/src/: ambient.rs  ambient_fmt.rs  analysis.rs  brief.rs  brief_fmt.rs  cache.rs  checkpoint.rs  codegraph.rs  codegraph_query.rs  config.rs  datalog.rs  dispatch.rs  format.rs  fxhash.rs  hook.rs  hook_build.rs  hook_mgmt.rs  index.rs  index_build.rs  index_read.rs  json.rs  lock.rs  main.rs  mcp.rs  reload.rs  score.rs  search.rs  session.rs  sock.rs  text.rs  time.rs  tools.rs  topics.rs  topics_io.rs  write.rs
helix_background_llm_helper/: Cargo.toml  DESIGN.md  DOCS.md  readme.md
helix_background_llm_helper/src/: analyze.rs  bench_dispatch.rs  bench_kernels.rs  bench_matmul.rs  bpe.rs  cache.rs  daemon.rs  datalog.rs  embed.rs  gguf.rs  gpu.rs  infer.rs  infer_batch.rs  insight.rs  kernels.rs  kernels_batch.rs  kernels_fp16.rs  main.rs  metal_test.rs  model.rs  similarity.rs  tokenize.rs
src/: brief.rs  config.rs  fxhash.rs  hook.rs  index.rs  main.rs  mcp.rs  search.rs  session.rs  sock.rs  text.rs  write.rs
